Update ENTRYPOINT to include --add-opens option